AWS/EKS-Deployment/app-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: book
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  ports:
  - protocol: TCP
    port: 6000
    targetPort: 6000
