AWS/EKS-Deployment/app-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /books
        pathType: Prefix
        backend:
          service:
            name: book-service
            port:
              number: 5000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 6000
